升级vo时间显示方式
